--- a/style.css
+++ b/style.css
@@ -1,5 +1,31 @@
-@media screen and (max-width;768px)[
+footer {
+
+    width:100%;
+    position:fixed;
+    bottom:0;
+    height: 10%;
+    z-index: 1;
+color:white;
+}
+
+
+
+
+
+
+@media screen and (max-width:766px){
+    #change{
+        margin-bottom:5%;
+        overflow: scroll;
+        padding: 1%;
+
+    }
+
+footer {
+    position:sticky;
+    bottom: 0;
+}
+
+}
 
     
-]
-]
