added padding to my container background color and fixed up about me page with some line spacing in the index.html

--- a/style.css
+++ b/style.css
@@ -20,9 +20,10 @@ body {
   -o-background-size: cover;
   background-size: cover;
   }
+  
   #contact-background, #portfolio-background, #aboutme-background{
 background-color:rgb(179, 173, 230);
-
+padding-bottom: 2%;
   }
 
 
